--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,12 @@ composeBom = "2024.09.00"
 hiltAndroid = "2.51.1"
 hiltNavigationCompose = "1.2.0"
 daggerHilt = "2.48"
-kspVersion = "2.2.10-2.0.2"
+kspVersion = "2.0.21-1.0.25" #Bu versiyon hiçbir zaman kotlin versiyonu altında kalmamalı hata veriyor.
 
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 gson = "2.11.0"
+coreKtxVersion = "1.17.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,12 +44,14 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android" , version.ref = "daggerHilt"}
 kotlinAndroidKsp = { id = "com.google.devtools.ksp", version.ref ="kspVersion" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
 
 
