-Service model added. -Ui model added. -An airplane image has been added in place of the marker in FlightMapComponent.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyCJQresx5Vd3KUbOXMP79OIEGtnVOyWR94" />
     </application>
 
 </manifest>
